# lod-medical-2021

./: .env.local  .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: .gitignore
backend/medical_api/: .dockerignore  Makefile  alembic.ini
backend/medical_api/common/: logger.py
backend/medical_api/dataplane/: redis.py
backend/medical_api/deployment/: pre_start.py
backend/medical_api/deployment/server/: gunicorn_conf.py
backend/medical_api/domain/: questions.py  schemas.py  session.py
backend/medical_api/scripts/: __main__.py  utils.py
backend/medical_api/scripts/init/: __init__.py  generate_questionnaire.py
backend/medical_api/service/: api.py  schemas.py
backend/nginx/: nginx.conf
docker-init/mongo/: mongo-init.js
medical_api/: pyproject.toml  setup.cfg
medical_api/common/: utils.py
medical_api/crud/: events.py
medical_api/database/: __init__.py  base.py  functions.py
medical_api/database/migrations/: env.py
medical_api/dataplane/: __init__.py  mongo.py  neo4j.py  redis.py
medical_api/dataplane/postgres/: base.py  functions.py  models.py
medical_api/dataplane/postgres/migrations/: env.py
medical_api/deployment/server/: Dockerfile
medical_api/domain/: consts.py  exceptions.py  questions.py  schemas.py  session.py
medical_api/scripts/: __init__.py  __main__.py  utils.py
medical_api/scripts/init/: generate_questionnaire.py
medical_api/service/: api.py  dependencies.py  main.py
medical_api/service/routes/: __init__.py  questionnaire.py  temp.py
medical_api/settings/: common.py
nginx/: backend.conf
(+3 files in other folders)
